fix spacing bottom for form

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -27,8 +27,8 @@
 }
 
 .main {
-  padding: 2rem 0 0 0 ;
-  margin-bottom: 120px;
+  padding: 2rem 0 120px 0;
+
   ul {
     list-style: none;
     padding: 0;
